--- a/config.env
+++ b/config.env
@@ -14,14 +14,14 @@ AUTHORIZED_CHATS = "-1001723337596"
 SUDO_USERS = ""
 IGNORE_PENDING_REQUESTS = ""
 USE_SERVICE_ACCOUNTS = "True"
-INDEX_URL = "https://godrive.herobenhero.workers.dev/1:/Bot"
-STATUS_LIMIT = ""
+INDEX_URL = "https://gdrive1.herobenhero.workers.dev/0:/GdriveXbot"
+STATUS_LIMIT = "4"
 STOP_DUPLICATE = "True"
 CMD_INDEX = ""
 UPTOBOX_TOKEN = ""
 TORRENT_TIMEOUT = ""
 EXTENTION_FILTER = ""
-INCOMPLETE_TASK_NOTIFIER = ""
+INCOMPLETE_TASK_NOTIFIER = "True"
 # Update
 UPSTREAM_REPO = ""
 UPSTREAM_BRANCH = ""
