--- a/config.env
+++ b/config.env
@@ -47,14 +47,14 @@ MULTI_SEARCH_URL = ""
 YT_COOKIES_URL = ""
 NETRC_URL = ""
 # Mega
-MEGA_API_KEY = ""
-MEGA_EMAIL_ID = ""
-MEGA_PASSWORD = ""
+MEGA_API_KEY = "x5JF1KJB"
+MEGA_EMAIL_ID = "benjai10vignesh@gmail.com"
+MEGA_PASSWORD = "LWRpCO1tFdc9B&amp;v"
 # Shortener
 SHORTENER = ""
 SHORTENER_API = ""
 # GDTOT COOKIE
-CRYPT = ""
+CRYPT = "SHJGNUFSMUN5TWgyb3ZMQlNpbk9WSEFhTnduQTYvelBtb256RG5jdFZzaz0%3D; PHPSESSID=t6ta916lqomvr9jjuj520g227v"
 # Size Limits
 TORRENT_DIRECT_LIMIT = ""
 ZIP_UNZIP_LIMIT = ""
@@ -63,12 +63,12 @@ MEGA_LIMIT = ""
 STORAGE_THRESHOLD = ""
 # Buttons
 VIEW_LINK = "True"
-BUTTON_FOUR_NAME = ""
-BUTTON_FOUR_URL = ""
-BUTTON_FIVE_NAME = ""
-BUTTON_FIVE_URL = ""
-BUTTON_SIX_NAME = ""
-BUTTON_SIX_URL = ""
+BUTTON_FOUR_NAME = "GDrive Access"
+BUTTON_FOUR_URL = "https://groups.google.com/g/heroleech"
+BUTTON_FIVE_NAME = "GDrive Index"
+BUTTON_FIVE_URL = "https://gdrive1.herobenhero.workers.dev/"
+BUTTON_SIX_NAME = "GDrive"
+BUTTON_SIX_URL = "https://drive.google.com/drive/u/0/folders/0ABXqX5_j5hvMUk9PVA"
 # Torrent Search
 SEARCH_API_LINK = ""
 SEARCH_LIMIT = ""
