--- a/config.env
+++ b/config.env
@@ -23,7 +23,7 @@ TORRENT_TIMEOUT = "300"
 EXTENTION_FILTER = ""
 INCOMPLETE_TASK_NOTIFIER = "True"
 # Update
-UPSTREAM_REPO = ""
+UPSTREAM_REPO = "https://github.com/HeroBenHero/mirror-leech-telegram-bot"
 UPSTREAM_BRANCH = ""
 # Leech
 TG_SPLIT_SIZE = ""
@@ -62,7 +62,7 @@ CLONE_LIMIT = "50"
 MEGA_LIMIT = "50"
 STORAGE_THRESHOLD = "400"
 # Buttons
-VIEW_LINK = "True"
+VIEW_LINK = ""
 BUTTON_FOUR_NAME = "GDrive Access"
 BUTTON_FOUR_URL = "https://groups.google.com/g/heroleech"
 BUTTON_FIVE_NAME = "GDrive Index"
